<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">
    <ScrollView
        android:id="@+id/ScrollView02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:paddingTop="@dimen/activity_vertical_margin"

        tools:ignore="MissingConstraints">
        <LinearLayout
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:layout_height="fill_parent"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/GameIDHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/game_id_header"
                android:background="@color/black"
                android:textColor="@color/white"
                android:textSize="10pt">
            </TextView>

            <TextView
                android:id="@+id/RoundHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/round_header"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@color/black"
                android:textColor="@color/white"
                android:textSize="10pt">
            </TextView>

            <TextView
                android:id="@+id/Instruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instruction"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textSize="10pt">
            </TextView>

            <RadioGroup
                android:id="@+id/RadioGroup01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:checkedButton="@id/option1"
                android:layout_marginTop="@dimen/activity_vertical_margin">
                <RadioButton android:id="@+id/option1"
                    android:tag="o1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/option1" />
                <RadioButton android:id="@+id/option2"
                    android:tag="o2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/option2" />
                <RadioButton android:id="@+id/option3"
                    android:tag="o3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/option3" />
                <RadioButton android:id="@+id/option4"
                    android:tag="o4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/option4" />
                <RadioButton android:id="@+id/option5"
                    android:tag="o5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/option5" />
            </RadioGroup>

            <Button
                android:id="@+id/button_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/round_submit"
                android:layout_marginTop="@dimen/activity_vertical_margin" />

            <TextView
                android:id="@+id/GroupMinimum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/groupmin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textSize="10pt">
            </TextView>
            <TextView
                android:id="@+id/GroupMinimumValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="10pt">
            </TextView>

            <TextView
                android:id="@+id/RoundScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/roundscore"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textSize="10pt">
            </TextView>
            <TextView
                android:id="@+id/RoundScoreValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="10pt">
            </TextView>

            <TextView
                android:id="@+id/TotalScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/totalscore"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textSize="10pt">
            </TextView>
            <TextView
                android:id="@+id/TotalScoreValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="10pt">
            </TextView>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>