<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/game_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/game_name"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:ignore="MissingConstraints"/>

    <Button
        android:id="@+id/button_start_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_game"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toBottomOf="@id/game_title"/>

    <Button
        android:id="@+id/button_create_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_game"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/game_title"/>

    <Button
        android:id="@+id/button_select_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_game"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/button_create_game"/>
</androidx.constraintlayout.widget.ConstraintLayout>